Improve back-end routing and api port design
