# server/server.js
@@ -26,6 +26,7 @@ app.use(express.urlencoded({ extended: true }));
 // Handle custom routes
 app.use("/api/v1/user", require("./routes/userRoutes"));
 app.use("/api/v1/account", require("./routes/accountRoutes"));
+app.use("/api/v1/transaction", require("./routes/transactionRoutes"));
 
 // API Documentation
 if (process.env.NODE_ENV !== "production") {
@@ -40,5 +41,5 @@ app.listen(PORT, () => {
   console.log(`Server listening on http://localhost:${PORT}`);
 
   createAccount();
-  createTransactions();
+  // createTransactions();
 });
