# swagger.yaml
@@ -126,9 +126,38 @@ paths:
           description: Invalid Fields
         "500":
           description: Internal Server Error
-# 获取特定账户的所有交易
-  /account/transactions/{accountId}:
-    get: 
+  # Transaction  Moduls
+  /transaction/createTransactions:
+    post:
+      security:
+        - Bearer: []
+      tags:
+        - Transaction Module
+      summary: Create Transactions
+      parameters:
+        - in: header
+          name: Authorization
+          required: true
+          type: string
+        - in: body
+          name: body
+          description: Transactions Payload
+          required: true
+          schema:
+            $ref: "#/definitions/Transaction"
+      produces:
+        - application/json
+      responses:
+        "200":
+          description: Transactions retrieved successully
+          schema:
+            $ref: "#/definitions/Transaction"
+        "400":
+          description: Invalid Fields
+        "500":
+          description: Internal Server Error
+  /transaction/getTransactions:
+    get:
       security:
         - Bearer: []
       tags:
@@ -154,90 +183,65 @@ paths:
         "400":
           description: Invalid Fields
         "500":
-          description: Internal Server Error  
-  # 修改备注
+          description: Internal Server Error
+  /transaction/updateTransactions:
     put:
       security:
         - Bearer: []
       tags:
         - Transaction Module
-      summary: change Account Transactions
+      summary: Update Transactions
       parameters:
         - in: header
           name: Authorization
           required: true
           type: string
+        - in: path
+          name: transactionId
+          description: ID of the transaction
+          required: true
+          type: string
         - in: body
           name: body
-          description: Updated Transaction Payload
+          description: UpdateTransactions Payload
           required: true
           schema:
-            type: object
-            properties:
-              token:
-                type: string
-                description: User authentication token (JWT)
-              transactionId:
-                type: string
-                description: ID of the transaction to be modified
-              category:
-                type: string
-                description: Updated category of the transaction
-              note:
-                type: string
-                description: Updated note of the transaction
-            required:
-              - token
-              - transactionId
+            $ref: "#/definitions/UpdateTransactions"
       produces:
         - application/json
       responses:
         "200":
-          description: Transaction updated successully
-          schema:
-            $ref: "#/definitions/TransactionUpdate"
+          description: Transactions updated successully
         "400":
           description: Invalid Fields
         "500":
           description: Internal Server Error
+  /transaction/deleteTransactionsInfo:
     delete:
       security:
         - Bearer: []
       tags:
         - Transaction Module
-      summary: Delete Account Transactions
+      summary: Delete Transactions Information from Transaction Record
       parameters:
         - in: header
-            name: Authorization
-            required: true
-            type: string
-        - in: path
-          name: transactionId
-          description: ID of the transaction to be deleted
+          name: Authorization
           required: true
           type: string
-        - in: query
-          name: category
-          description: Deleted category of the transaction
-          required: false
-          type: string
-        - in: query
-          name: note
-          description: Deleted note of the transaction
-          required: false
+        - in: path
+          name: transactionId
+          description: ID of the transaction
+          required: true
           type: string
       produces:
         - application/json
       responses:
         "200":
-          description: Transaction deleted successully
-          schema:
-          $ref: "#/definitions/TransactionUpdate"
+          description: Transactions informations deleted successully
         "400":
           description: Invalid Fields
-        "500": 
+        "500":
           description: Internal Server Error
-
 securityDefinitions:
   Bearer:
     type: apiKey
@@ -299,6 +303,9 @@ definitions:
       id:
         type: string
         description: Unique identifier for the account
+      userId:
+        type: string
+        description: Unique identifier for the user
       accountTitle:
         type: string
         description: Title of the account
@@ -318,12 +325,12 @@ definitions:
         type: string
         description: ID of the account associated with the transaction
       date:
-       type: string
-       format: date
-       description: Date of the transaction
+        type: string
+        format: date
+        description: Date of the transaction
       description:
-       type: string
-       description: Description of the transaction
+        type: string
+        description: Description of the transaction
       amount:
         type: number
         description: Amount of the transaction
@@ -332,20 +339,21 @@ definitions:
         description: Current balance of the account
       transactionType:
         type: string
-        description: Type of the transaction 
+        description: Type of the transaction
       category:
         type: string
         description: Category of the transaction
       note:
         type: string
         description: Note associated with the transaction
-
-  TransactionUpdate:
+  UpdateTransactions:
     type: object
     properties:
       note:
         type: string
         description: Updated note for the transaction
+        example: supermarket
       category:
         type: string
-        description: Category of the category
+        description: Category of the transaction
+        example: Food
